--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,4 @@
-<h1 class="text-3xl font-bold underline text-center">
+<!-- <h1 class="text-3xl font-bold underline text-center">
   Hello world!
-</h1>
+</h1> -->
+<router-outlet></router-outlet>
