--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,15 +1,33 @@
-<div class="w-full h-screen bg-slate-900 flex flex-col justify-center items-center">
-    <form class="max-w-md w-full mx-auto bg-white/10 p-10 rounded-lg flex flex-col">
+<div class="flex flex-col items-center justify-center w-full h-screen bg-slate-900">
+    <form class="flex flex-col w-full max-w-md p-10 mx-auto rounded-lg bg-white/10">
         <div class="mb-5">
           <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Tu email</label>
-          <input type="email" id="email" class="bg-gray-50 border border-gray-300 text-gray-900 text-center rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="tucorreo@correo.com" required>
+          <input
+                [(ngModel)] = 'email'
+                type="email"
+                id="email"
+                name="email"
+                class="bg-gray-50 border border-gray-300 text-gray-900 text-center rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                placeholder="tucorreo@correo.com"
+                required
+          >
         </div>
         <div class="mb-5">
           <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Tu contraseña</label>
-          <input type="password" id="password" class="bg-gray-50 border border-gray-300 text-gray-900 text-center rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required>
-          <a href="#" class="mt-2 block text-right text-blue-300">¿Olvidaste tu contraseña?</a>
+          <input
+                [(ngModel)]="password"
+                type="password"
+                id="password"
+                name="password"
+                class="bg-gray-50 border border-gray-300 text-gray-900 text-center rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                required>
+          <a href="#" class="block mt-2 text-right text-blue-300">¿Olvidaste tu contraseña?</a>
         </div>
-        <button class="text-white mb-5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 uppercase tracking-wider">Iniciar sesión</button>
+        <button
+                (click)="login(email, password)"
+                class="text-white mb-5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 uppercase tracking-wider">
+                Iniciar sesión
+        </button>
         <a href="#" class="text-center text-blue-300 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 border-2 border-transparent hover:border-blue-600 hover:text-white transition-colors  dark:focus:ring-blue-800 uppercase">Crea una cuenta aquí</a>
     </form>
 </div>
