--- a/frontend/src/app/components/tasks/tasks.component.html
+++ b/frontend/src/app/components/tasks/tasks.component.html
@@ -1,6 +1,35 @@
-<div class="flex flex-col items-center justify-center w-full h-screen">
-    <div class="w-full max-w-5xl">
-        <ul class="flex flex-col items-center justify-center w-full">
+<div class="flex flex-col items-center w-full h-screen">
+    <div class="w-full max-w-5xl mt-14">
+        <form class="flex items-center mb-10">
+            <label for="new-task" class="sr-only">Nueva tarea</label>
+            <div class="relative w-full">
+                <div class="absolute inset-y-0 flex items-center pointer-events-none start-0 ps-3">
+                    <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 21 21">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11.15 5.6h.01m3.337 1.913h.01m-6.979 0h.01M5.541 11h.01M15 15h2.706a1.957 1.957 0 0 0 1.883-1.325A9 9 0 1 0 2.043 11.89 9.1 9.1 0 0 0 7.2 19.1a8.62 8.62 0 0 0 3.769.9A2.013 2.013 0 0 0 13 18v-.857A2.034 2.034 0 0 1 15 15Z"/>
+                    </svg>
+                </div>
+                <input
+                        [(ngModel)]="newTaskInput"
+                        type="text"
+                        id="new-task"
+                        name="new-task"
+                        class="bg-gray-50 border border-gray-300 text-gray-900 text-lg rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5"
+                        placeholder="Nueva tarea..."
+                        required>
+            </div>
+
+            <button
+                    (click)="addNewTask(newTaskInput)"
+                    class="inline-flex items-center py-2.5 px-3 ms-2 text-lg font-medium text-white bg-blue-700 rounded-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+            >
+                <svg class="w-4 h-4 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
+                </svg>Agregar
+            </button>
+        </form>
+
+        <!-- Tasks -->
+        <ul class="flex flex-col items-center justify-center w-full gap-y-5">
             @for(task of tasks; let i = $index; track i){
                 <li class="flex items-center justify-between w-full p-3 text-2xl text-black rounded-md bg-white/40"
                  >
@@ -11,7 +40,7 @@
                                 <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
                             </svg>
                         }
-                
+
                         @if(task.completed){
                             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-circle-check" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -20,7 +49,7 @@
                             </svg>
                         }
                     </button>
-            
+
                     <a class="cursor-pointer" [ngClass]=" task.completed ? 'line-through' : '' "> {{task.title}} </a>
 
                     <button>
