add: subtasks view, service getSubtasks

--- a/frontend/src/app/components/tasks/tasks.component.html
+++ b/frontend/src/app/components/tasks/tasks.component.html
@@ -50,7 +50,7 @@
                         }
                     </button>
 
-                    <a class="cursor-pointer" [ngClass]=" task.completed ? 'line-through' : '' "> {{task.title}} </a>
+                    <a [routerLink]="['/task', task.url]" class="cursor-pointer" [ngClass]=" task.completed ? 'line-through' : '' "> {{task.title}} </a>
 
                     <button (click)="deleteTask(task.id)">
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-trash" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#e53737" fill="none" stroke-linecap="round" stroke-linejoin="round">
