--- a/frontend/src/app/components/subtasks/subtasks.component.html
+++ b/frontend/src/app/components/subtasks/subtasks.component.html
@@ -2,11 +2,11 @@
     <div class="w-full max-w-5xl mt-14">
         <h2 class="mt-10 text-4xl font-medium text-white uppercase">Tarea: <span class="font-normal">{{task}}</span></h2>
         @if(subtasks.length === 0){
-            <div class="p-5 text-white rounded-md my-14 bg-white/20">
+            <div class="p-5 text-white rounded-md mt-14 bg-white/20">
                 <p class="text-2xl text-center">No tienes subtareas aquí. Empieza agregando una.</p>
             </div>
         }
-        <form class="flex items-center mb-10">
+        <form class="flex items-center mb-10 mt-14">
             <label for="new-subtask" class="sr-only">Nueva subtarea</label>
             <div class="relative w-full">
                 <div class="absolute inset-y-0 flex items-center pointer-events-none start-0 ps-3">
@@ -19,7 +19,7 @@
                     </svg>
                 </div>
                 <input
-                        
+                        [(ngModel)] = "newSubtaskInput"
                         type="text"
                         id="new-subtask"
                         name="new-subtask"
@@ -29,7 +29,7 @@
             </div>
 
             <button
-                    
+                    (click)="addNewSubtask(newSubtaskInput)"
                     class="inline-flex items-center py-2.5 px-3 ms-2 text-lg font-medium text-white bg-blue-700 rounded-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
             >
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-circle-plus size-7 me-2" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -40,5 +40,43 @@
                   </svg>Agregar
             </button>
         </form>
+
+         <!-- Tasks -->
+         <ul class="flex flex-col items-center justify-center w-full gap-y-5">
+            @for( subtask of subtasks; let i = $index; track i){
+                <li class="flex items-center justify-between w-full p-3 text-2xl text-black rounded-md bg-white/40"
+                 >
+                    <button (click)="subtaskIsCompleted(subtask.id)">
+                        @if(!subtask.completed){
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-circle" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
+                            </svg>
+                        }
+
+                        @if(subtask.completed){
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-circle-check" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" fill="#ABFEA9" />
+                                <path d="M9 12l2 2l4 -4" />
+                            </svg>
+                        }
+                    </button>
+
+                    <p class="text-balance" [ngClass]="subtask.completed ? 'line-through' : '' "> {{subtask.description}} </p>
+
+                    <button >
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-trash" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#e53737" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                            <path d="M4 7l16 0" />
+                            <path d="M10 11l0 6" />
+                            <path d="M14 11l0 6" />
+                            <path d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12" />
+                            <path d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3" />
+                        </svg>
+                    </button>
+        </li>
+            }
+        </ul>
     </div>
 </div>
