--- a/frontend/src/app/components/subtasks/subtasks.component.html
+++ b/frontend/src/app/components/subtasks/subtasks.component.html
@@ -24,7 +24,7 @@
                         id="new-subtask"
                         name="new-subtask"
                         class="bg-gray-50 border border-gray-300 text-gray-900 text-lg rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5"
-                        placeholder="Nueva tarea..."
+                        placeholder="Nueva subtarea..."
                         required>
             </div>
 
@@ -37,7 +37,7 @@
                     <path d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0" />
                     <path d="M9 12h6" />
                     <path d="M12 9v6" />
-                  </svg>Agregar
+                </svg>Agregar
             </button>
         </form>
 
