--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,33 +1,41 @@
-<div class="flex flex-col items-center justify-center w-full h-screen bg-slate-900">
-    <form class="flex flex-col w-full max-w-md p-10 mx-auto rounded-lg bg-white/10">
+<div class="relative z-50 flex flex-col items-center justify-center w-full h-screen">
+    <form class="flex flex-col w-full max-w-xs p-10 mx-auto rounded-lg lg:py-14 lg:max-w-sm bg-white/60">
         <div class="mb-5">
-          <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Tu email</label>
+          <label for="email" class="block mb-2 text-sm font-medium text-gray-900">Tu email</label>
           <input
                 [(ngModel)] = 'email'
                 type="email"
                 id="email"
                 name="email"
-                class="bg-gray-50 border border-gray-300 text-gray-900 text-center rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                class="bg-gray-100 border border-gray-300 text-gray-900 text-center rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
                 placeholder="tucorreo@correo.com"
                 required
           >
         </div>
         <div class="mb-5">
-          <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Tu contraseña</label>
+          <label for="password" class="block mb-2 text-sm font-medium text-gray-900">Tu contraseña</label>
           <input
                 [(ngModel)]="password"
                 type="password"
                 id="password"
                 name="password"
-                class="bg-gray-50 border border-gray-300 text-gray-900 text-center rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                class="bg-gray-100 border border-gray-300 text-gray-900 text-center rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
                 required>
-          <a href="#" class="block mt-2 text-right text-blue-300">¿Olvidaste tu contraseña?</a>
+          <a href="#" class="block mt-2 text-right text-slate-600 hover:text-slate-800">¿Olvidaste tu contraseña?</a>
         </div>
         <button
                 (click)="login(email, password)"
                 class="text-white mb-5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 uppercase tracking-wider">
                 Iniciar sesión
         </button>
-        <a href="#" class="text-center text-blue-300 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 border-2 border-transparent hover:border-blue-600 hover:text-white transition-colors  dark:focus:ring-blue-800 uppercase">Crea una cuenta aquí</a>
+        <a href="#" class="text-center text-slate-600 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 border-2 border-transparent hover:border-blue-600 hover:text-slate-800 transition-colors  dark:focus:ring-blue-800 uppercase">Crea una cuenta aquí</a>
     </form>
+    <div class="absolute w-full h-screen -z-10 bg-gradient-to-b from-pink-800/50 via-slate-900/50 to-slate-950/90"></div>
+    <div class="absolute w-full h-screen overflow-hidden -z-50">
+      <video autoplay loop muted playsinline class="absolute top-0 left-0 object-cover w-full h-full">
+        <source src="../../../assets/video/video-uptask.mp4" type="video/mp4">
+        <source src="../../../assets/video/video-uptask.ogg" type="video/ogg">
+        <source src="../../../assets/video/video-uptask.webm" type="video/webm">
+      </video>
+    </div>
 </div>
