add: header component

--- a/frontend/src/app/components/subtasks/subtasks.component.html
+++ b/frontend/src/app/components/subtasks/subtasks.component.html
@@ -1,3 +1,4 @@
+<header-app />
 <div class="flex flex-col items-center w-full h-screen">
     <div class="w-full max-w-5xl mt-14">
         <h2 class="mt-10 text-4xl font-medium text-white uppercase">Tarea: <span class="font-normal">{{task}}</span></h2>
