--- a/frontend/src/app/components/tasks/tasks.component.html
+++ b/frontend/src/app/components/tasks/tasks.component.html
@@ -1,3 +1,4 @@
+<header-app />
 <div class="flex flex-col items-center w-full h-screen">
     <div class="w-full max-w-5xl mt-14">
         <form class="flex items-center mb-10">
