--- a/frontend/src/app/components/tasks/tasks.component.html
+++ b/frontend/src/app/components/tasks/tasks.component.html
@@ -1,7 +1,7 @@
 <header-app />
 <div class="flex flex-col items-center w-full h-screen">
     <div class="w-full max-w-5xl mt-14">
-        <form class="flex items-center mb-10">
+        <form class="flex items-center mb-4">
             <label for="new-task" class="sr-only">Nueva tarea</label>
             <div class="relative w-full">
                 <div class="absolute inset-y-0 flex items-center pointer-events-none start-0 ps-3">
@@ -35,6 +35,11 @@
                 </svg>Agregar
             </button>
         </form>
+
+        <div class="flex items-center justify-center w-full mb-10 gap-x-3">
+            <svg xmlns="http://www.w3.org/2000/svg" class="size-6" viewBox="0 0 24 24"><path fill="#ffd75e" d="M20 11h3v2h-3zM1 11h3v2H1zM13 1v3h-2V1zM4.92 3.5l2.13 2.14l-1.42 1.41L3.5 4.93zm12.03 2.13l2.12-2.13l1.43 1.43l-2.13 2.12zM12 6a6 6 0 0 1 6 6c0 2.22-1.21 4.16-3 5.2V19a1 1 0 0 1-1 1h-4a1 1 0 0 1-1-1v-1.8c-1.79-1.04-3-2.98-3-5.2a6 6 0 0 1 6-6m2 15v1a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v-1zm-3-3h2v-2.13c1.73-.44 3-2.01 3-3.87a4 4 0 0 0-4-4a4 4 0 0 0-4 4c0 1.86 1.27 3.43 3 3.87z"/></svg>
+            <p class="text-xl text-white/75">Tip: Puedes clickear sobre la tarea y agregar subtareas! 😉 </p>
+        </div>
 
         <!-- Tasks -->
         <ul class="flex flex-col items-center justify-center w-full gap-y-5">
