--- a/frontend/src/app/components/subtasks/subtasks.component.html
+++ b/frontend/src/app/components/subtasks/subtasks.component.html
@@ -2,6 +2,14 @@
 <div class="flex flex-col items-center w-full h-screen">
     <div class="w-full max-w-5xl mt-14">
         <h2 class="mt-10 text-4xl font-medium text-white uppercase">Tarea: <span class="font-normal">{{task}}</span></h2>
+
+        <div class="flex items-center justify-center max-w-3xl mx-auto mt-10 gap-x-3">
+            <p class="text-xl text-white">Progreso: </p>
+            <div class="w-full overflow-hidden bg-gray-700 border-2 rounded-full border-slate-800">
+                <div class="p-1 text-base font-medium leading-none text-center text-blue-100 transition-all bg-indigo-600 rounded-full" [style.width]="progressTask()"> {{progressTask()}}</div>
+            </div>
+        </div>
+
         @if(subtasks.length === 0){
             <div class="p-5 text-white rounded-md mt-14 bg-white/20">
                 <p class="text-2xl text-center">No tienes subtareas aquí. Empieza agregando una.</p>
@@ -76,7 +84,7 @@
                             <path d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3" />
                         </svg>
                     </button>
-        </li>
+                </li>
             }
         </ul>
     </div>
