add: footer in all views

--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -38,4 +38,5 @@
         <source src="../../../assets/video/video-uptask.webm" type="video/webm">
       </video>
     </div>
+    <footer-app />
 </div>
