--- a/frontend/src/app/components/subtasks/subtasks.component.html
+++ b/frontend/src/app/components/subtasks/subtasks.component.html
@@ -1,6 +1,6 @@
 <header-app />
-<div class="flex flex-col items-center w-full h-screen">
-    <div class="w-full max-w-5xl mt-14">
+<div class="flex flex-col items-center w-full mb-20">
+    <div class="w-full max-w-5xl">
         <h2 class="mt-10 text-4xl font-medium text-white uppercase">Tarea: <span class="font-normal">{{task}}</span></h2>
 
         <div class="flex items-center justify-center max-w-3xl mx-auto mt-10 gap-x-3">
@@ -97,3 +97,4 @@
         </div>
     </div>
 </div>
+<footer-app />
