--- a/frontend/src/app/components/tasks/tasks.component.html
+++ b/frontend/src/app/components/tasks/tasks.component.html
@@ -1,5 +1,5 @@
 <header-app />
-<div class="flex flex-col items-center w-full h-screen">
+<div class="flex flex-col items-center w-full">
     <div class="w-full max-w-5xl mt-14">
         <form class="flex items-center mb-4">
             <label for="new-task" class="sr-only">Nueva tarea</label>
@@ -80,3 +80,4 @@
         </ul>
     </div>
 </div>
+<footer-app />
