add: new-password form validations

--- a/frontend/src/app/components/new-password/new-password.component.html
+++ b/frontend/src/app/components/new-password/new-password.component.html
@@ -1,13 +1,19 @@
 <div class="relative z-50 flex flex-col items-center justify-center w-full h-screen">
-    @if(verification){
+    @if(verification && !successStatus){
         <form class="flex flex-col w-full max-w-xs p-10 mx-auto rounded-lg lg:py-14 lg:max-w-sm bg-white/60">
+            @if(errorStatus){
+                <div class="w-full">
+                    <p class="w-full p-2 mb-4 text-center text-white bg-red-600 rounded-md">{{errorMessage}}</p>
+                </div>
+            }
             <div class="mb-5">
-            <label for="email" class="block mb-2 text-sm font-medium text-gray-900">Nueva contraseña</label>
+            <label for="password" class="block mb-2 text-sm font-medium text-gray-900">Nueva contraseña</label>
             <input
                     [(ngModel)] = 'password'
                     type="password"
                     id="password"
                     name="password"
+                    (blur)="validatePassword(password)"
                     class="bg-gray-100 border border-gray-300 text-gray-900 text-center rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
                     placeholder="******"
                     required
@@ -19,6 +25,10 @@
                     Guardar
             </button>
         </form>
+    } @else if(verification && successStatus) {
+        <div class="flex flex-col p-6 rounded-md gap-y-4 bg-white/60">
+            <h2 class="text-2xl text-center">✅ Contraseña reestablecida</h2>
+        </div>
     } @else {
         <div class="flex flex-col p-6 rounded-md gap-y-4 bg-white/60">
             <h2 class="text-2xl text-center">¡No autorizado!</h2>
