--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,6 +1,8 @@
 <div class="relative z-50 flex flex-col items-center justify-center w-full h-screen">
+  <h1 class="font-comforta font-bold text-5xl text-white absolute top-0 mt-20 md:mt-24 lg:mt-10 xl:hidden">
+    UpTask</h1>
   @if(!showSpinner){
-  <form class="flex flex-col w-full max-w-xs p-10 mx-auto rounded-lg lg:py-14 lg:max-w-sm bg-white/60">
+  <form class="flex flex-col w-full max-w-xs p-10 mx-auto rounded-lg lg:py-14 lg:max-w-sm bg-white/60 z-40">
     <div class="w-full">
       @if(errorStatus){
       <p class="w-full p-2 mb-4 text-center text-white bg-red-600 rounded-md">{{errorMessage}}</p>
