--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,17 +1,12 @@
 <div class="relative z-50 flex items-center justify-between w-full p-10">
     <div class="flex items-center gap-x-4">
-        <img
-            src="../../../assets/image/icon-header.svg"
-            class="size-14"
-            alt="icono tareas"
-        >
-        <p class="text-2xl text-white">👋 Hola {{ nameUser }}!</p>
+        <img src="../../../assets/image/icon-header.svg" class="size-14" alt="icono tareas">
+        <p class="text-2xl text-white"> 👋 Hola {{ nameUser }}!</p>
     </div>
     <div>
-        <button
-            (click)="logout()"
+        <button (click)="logout()"
             class="inline-flex items-center py-2.5 px-3 ms-2 text-lg font-medium text-white bg-blue-700 rounded-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-        Cerrar sesión
-    </button>
+            Cerrar sesión
+        </button>
     </div>
 </div>
