--- a/frontend/src/app/components/tasks/tasks.component.html
+++ b/frontend/src/app/components/tasks/tasks.component.html
@@ -1,5 +1,5 @@
 <header-app />
-<div class="flex flex-col items-center w-full">
+<div class="flex flex-col items-center w-full pb-24">
     <div class="w-full max-w-5xl mt-14">
         <form class="flex flex-col items-center mb-4 gap-y-4 md:gap-y-0 md:flex-row">
             <label for="new-task" class="sr-only">Nueva tarea</label>
